--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,20 @@
 @import url("https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple");
 
+/* Estilos para dispositivos com largura de tela até 600px */
+@media (max-width: 600px) {
+    .box .boxdois .boxtres .boxum .cabecalho .img .login .texto { width:100%; }
+}
+  
+  /* Estilos para dispositivos com largura de tela entre 601px e 1024px */
+@media (min-width: 601px) and (max-width: 1024px) {
+    .box .boxdois .boxtres .boxum .cabecalho .img .login .texto { width:100%; }
+}
+  
+  /* Estilos para dispositivos com largura de tela acima de 1024px */
+@media (min-width: 1025px) {
+    .box .boxdois .boxtres .boxum .cabecalho .img .login .texto { width:100%; }
+}
+
 body {
     margin: 0;
     background-image: linear-gradient(to right, #707377, #201e20);
