tentativa 2 de responsividade

--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,31 @@
 @import url("https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple");
 
-/* Estilos para dispositivos com largura de tela até 600px */
-@media (max-width: 600px) {
-    .box .boxdois .boxtres .boxum .cabecalho .img .login .texto { width:100%; }
-}
-  
-  /* Estilos para dispositivos com largura de tela entre 601px e 1024px */
-@media (min-width: 601px) and (max-width: 1024px) {
-    .box .boxdois .boxtres .boxum .cabecalho .img .login .texto { width:100%; }
-}
-  
-  /* Estilos para dispositivos com largura de tela acima de 1024px */
-@media (min-width: 1025px) {
-    .box .boxdois .boxtres .boxum .cabecalho .img .login .texto { width:100%; }
-}
-
 body {
     margin: 0;
     background-image: linear-gradient(to right, #707377, #201e20);
 }
-        
-#container{
+
+#container {
     margin: auto;
     text-align: center;
     align-items: center;
 }
 
-.cabecalho{
+.cabecalho {
     height: 80px;
     background-color: #323232;
     display: flex;
     justify-content: space-around;
 }
+
 h1 {
-    margin: 2px 80px 30px 30px;
+    margin: 2px 30px 30px 30px;
     font-family: "Sofia", sans-serif;
     color: rgb(209, 24, 209);
     font-size: 50px;
 }
-a.sobre{
+
+a.sobre {
     text-decoration: none;
     color: rgb(209, 24, 209);
     font-family: "Sofia", sans-serif;
@@ -46,64 +33,109 @@ a.sobre{
     border-width: medium;
     border-radius: 20px;
     border-color: rgb(209, 24, 209);
-}
-a.contato{
-    text-decoration: none;
-    color: rgb(209, 24, 209);
-    font-family: "Sofia", sans-serif;
-    border-style: solid;
-    border-width: medium;
-    border-radius: 20px;
-    border-color: rgb(209, 24, 209);
-}
-.img{
-    margin-top: 10px;
-    width: 140px;
-    height: 20%;
-    border-radius: 20%;
-}
-.texto{
-    margin: 25px 250px;
-    font-family: Copperplate, Papyrus, fantasy;
 }
 
-.box{
-    width: 1280px;
+a.contato {
+    text-decoration: none;
+    color: rgb(209, 24, 209);
+    font-family: "Sofia", sans-serif;
+    border-style: solid;
+    border-width: medium;
+    border-radius: 20px;
+    border-color: rgb(209, 24, 209);
+}
+
+.img {
+    margin-top: 10px;
+    width: 140px;
+    height: auto;
+    border-radius: 20%;
+}
+
+.texto {
+    margin: 25px;
+}
+
+.box {
+    width: 100%;
     height: 300px;
     display: flex;
     justify-content: space-around;
 }
-.boxum{
-    width: 20%;
+
+.boxum {
+    flex-basis: 20%;
     height: 100%;
     background-color: #5ebfcc;
     border-radius: 20%;
     text-decoration: none;
     font-family: "Sofia", sans-serif;
-
 }
+
 .login {
     width: 200px;
     height: 200px;
     margin-top: 5%;
 }
-h3 a{
-    text-decoration: none;
 
+h3 a {
+    text-decoration: none;
 }
-.boxdois{
-    width: 20%;
+
+.boxdois {
+    flex-basis: 20%;
     height: 100%;
     background-color: #5ebfcc;
     border-radius: 20%;
     font-family: "Sofia", sans-serif;
     color: rgb(90, 18, 133);
 }
-.boxtres{
-    width: 20%;
+
+.boxtres {
+    flex-basis: 20%;
     height: 100%;
     background-color: #5ebfcc;
     border-radius: 20%;
     font-family: "Sofia", sans-serif;
     color: rgb(90, 18, 133);
+}
+
+/* Estilos para dispositivos com largura de tela até 600px */
+@media (max-width: 600px) {
+    h1 {
+        margin: 2px 10px 30px 10px;
+        font-size: 30px;
+    }
+
+    .texto {
+        margin: 10px;
+    }
+
+    .box,
+    .boxum,
+    .boxdois,
+    .boxtres,
+    .cabecalho,
+    .img,
+    .login {
+        width: 100%;
+    }
+
+    .box {
+        flex-wrap: wrap;
+    }
+}
+
+/* Estilos para dispositivos com largura de tela entre 601px e 1024px */
+@media (min-width: 601px) and (max-width: 1024px) {
+    .box,
+    .boxum,
+    .boxdois,
+    .boxtres,
+    .cabecalho,
+    .img,
+    .login,
+    .texto {
+        width: 100%;
+    }
 }
